--- a/hwhc-markdown.Rmd
+++ b/hwhc-markdown.Rmd
@@ -4,15 +4,18 @@ pagetitle: Help with Health Costs
 always_allow_html: true
 output:
   word_document:
-    toc: yes
+    toc: true
     toc_depth: '3'
   html_document:
-    anchor_sections: no
+    anchor_sections: false
     css: www/style.css
-    toc: yes
+    toc: true
     toc_depth: 3
     toc_float:
-      collapsed: no
+      collapsed: false
+  pdf_document:
+    toc: true
+    toc_depth: '3'
 ---
 
 ```{=html}
@@ -166,9 +169,8 @@ The amount of support provided is based on weekly income, necessary outgoings, p
 
 ```{r lis_application_chart}
 lis_application_objs$chart
+get_download_button(title = "Download chart data", data = lis_application_objs$chart_data, filename = "hwhc_figure_x")
 ```
-
-`r get_download_button(title = "Download chart data", data = lis_application_objs$chart_data, filename = "hwhc_figure_x")`
 
 Applicants will either complete a paper HC1 form or apply via the [online application for LIS](https://apply-for-help-with-nhs-costs.nhsbsa.nhs.uk/apply-online).
 
@@ -192,9 +194,8 @@ Applications to the NHS Low Income Scheme are assessed to determine if the appli
 
 ```{r lis_issued_chart}
 lis_issued_objs$chart
+get_download_button(title = "Download chart data", data = lis_issued_objs$chart_data, filename = "hwhc_figure_x")
 ```
-
-`r get_download_button(title = "Download chart data", data = lis_issued_objs$chart_data, filename = "hwhc_figure_x")`
 
 Two levels of support are available from the NHS Low Income Scheme. Depending on the outcome of the assessment, applicants could receive:
 
@@ -223,9 +224,8 @@ An outcome decision is only issued to the applicant following the completion of 
 
 ```{r lis_active_chart}
 lis_active_objs$chart
+get_download_button(title = "Download chart data", data = lis_active_objs$chart_data, filename = "hwhc_figure_x")
 ```
-
-`r get_download_button(title = "Download chart data", data = lis_active_objs$chart_data, filename = "hwhc_figure_x")`
 
 Active certificates measures the number of certificates valid in the specified financial year. Some NHS Low Income Scheme certificates can be valid up to 5 years. Therefore, the number of active certificates are higher than the certificates issued. 
 
@@ -249,9 +249,8 @@ Trends in active certificates are generally in line with certificates issued. In
 
 ```{r lis_duration_chart}
 lis_duration_objs$chart
+get_download_button(title = "Download chart data", data = lis_duration_objs$chart_data, filename = "hwhc_figure_x")
 ```
-
-`r get_download_button(title = "Download chart data", data = lis_duration_objs$chart_data, filename = "hwhc_figure_x")`
 
 The duration of NHS Low Income Scheme certificates can vary from a little as a day to a maximum length of 5 years. 
 
@@ -264,7 +263,6 @@ The circumstances of the applicant will determine the duration of the certificat
 * Students nearing the end of their course may receive a short term certificate until the end of their course.
 
 Almost 48,000 HC3 certificates, issued in 2023/24, were valid for a period of 12 months. This represents over 83% of all HC3 certificates issued in 2023/24. HC2 certificates show more variation in length than HC3 certificates. In 2023/24 43,000 HC2 certificates were valid for 6 months and 92,000 were valid for 12 months.
-
 
 #### Figure X: Number of NHS Low Income Scheme certificates issued, split by certificate type and applicant age band (2023/24) {.toc-ignore}
 
@@ -280,9 +278,8 @@ Almost 48,000 HC3 certificates, issued in 2023/24, were valid for a period of 12
 
 ```{r lis_age_chart}
 lis_age_objs$chart
+get_download_button(title = "Download chart data", data = lis_age_objs$chart_data, filename = "hwhc_figure_x")
 ```
-
-`r get_download_button(title = "Download chart data", data = lis_age_objs$chart_data, filename = "hwhc_figure_x")`
 
 NHS Low Income Scheme certificates cover the applicant, partners and any dependent children. Age information is only captured for the lead applicant though. 
 
@@ -306,9 +303,8 @@ For outcome decisions where no certificate was issued there is less variation by
 
 ```{r lis_imd_chart}
 lis_imd_objs$chart
+get_download_button(title = "Download chart data", data = lis_imd_objs$chart_data, filename = "hwhc_figure_x")
 ```
-
-`r get_download_button(title = "Download chart data", data = lis_imd_objs$chart_data, filename = "hwhc_figure_x")`
 
 The English Indices of Deprivation provide a measure of deprivation. In this report deprivation reflects the applicant's registered address. [Section 3.3 of this summary](#about_imd) contains more information on this measure. These indices of deprivation are specific to England and therefore can only be applied to certificates that can be assigned to an English postcode.
 
@@ -328,10 +324,15 @@ Despite being means-tested, certificates are still issued to applicants from les
 :::
 
 ```{r lis_icb_vis, figures-side, fig.show="hold", out.width="50%"}
-highcharter::hw_grid(lis_icb_objs$map, lis_icb_objs$chart, ncol = 2)
+highcharter::hw_grid(
+  lis_icb_objs$map, 
+  lis_icb_objs$chart, 
+  ncol = 2
+)
 ```
-
-`r get_download_button(title = "Download chart data", data = lis_icb_objs$chart_data, filename = "hwhc_figure_x")`
+```{r lis_icb_vis_download}
+get_download_button(title = "Download chart data", data = lis_icb_objs$chart_data, filename = "hwhc_figure_x")
+```
 
 Population estimates use figures published by [Office for National Statistics for ICB population](https://www.ons.gov.uk/peoplepopulationandcommunity/populationandmigration/populationestimates/datasets/clinicalcommissioninggroupmidyearpopulationestimates). These figures are mid-year estimates with 2022 population estimates used for this report. These are the latest available population statistics at the time of publication. To align with the people who may benefit from the NHS Low Income Scheme, population figures are based on people aged 16 and over.
 
@@ -366,9 +367,8 @@ Applications are submitted via a midwife, doctor or health visitor who confirms 
 
 ```{r matex_application_chart}
 mat_application_objs$chart
+get_download_button(title = "Download chart data", data = mat_application_objs$chart_data, filename = "hwhc_figure_x")
 ```
-
-`r get_download_button(title = "Download chart data", data = mat_application_objs$chart_data, filename = "hwhc_figure_x")`
 
 Applications for maternity exemption certificates dipped in 2020/2021 but has increased in each of the following years. In 2023/24, the increase in applications of 11% is the largest in recent years.
 
@@ -390,9 +390,8 @@ Applications are submitted via a healthcare professional, who confirms eligibili
 
 ```{r matex_issued_chart}
 mat_issued_objs$chart
+get_download_button(title = "Download chart data", data = mat_issued_objs$chart_data, filename = "hwhc_figure_x")
 ```
-
-`r get_download_button(title = "Download chart data", data = mat_issued_objs$chart_data, filename = "hwhc_figure_x")`
 
 The number of issued maternity exemption certificates dipped in 2020/2021 but has increased in each of the following years. In 2023/24, the increase in certificates issued of 12% is the largest in recent years.
 
@@ -414,9 +413,8 @@ Maternity exemption certificates are valid from when a pregnancy is confirmed up
 
 ```{r matex_active_chart}
 mat_active_objs$chart
+get_download_button(title = "Download chart data", data = mat_active_objs$chart_data, filename = "hwhc_figure_x")
 ```
-
-`r get_download_button(title = "Download chart data", data = mat_active_objs$chart_data, filename = "hwhc_figure_x")`
 
 The number of active certificates is only available from 2019/20 due to retention schedules for certificates prior to this period. It should be noted that active certificates are based solely on the start and expiration date of the issued certificates. This does not consider if the certificate holder was using the certificate or not.
 
@@ -438,9 +436,8 @@ Some certificates may be active in multiple financial years, and the number of y
 
 ```{r ch_mat_duration}
 ch_mat_duration
+get_download_button(title = "Download chart data", data = dl_mat_duration, filename = "hwhc_figure_x")
 ```
-
-`r get_download_button(title = "Download chart data", data = dl_mat_duration, filename = "hwhc_figure_x")`
 
 Maternity exemption certificates can be issued from the date the pregnancy is confirmed up to one year after the birth. Applications are submitted by a healthcare professional on the applicants behalf. Any delays in this process will impact the length of support available with some women not receiving a certificate until later in the pregnancy or until after the birth.
 
@@ -470,8 +467,9 @@ highcharter::hw_grid(
   ncol = 2
 )
 ```
-
-`r get_download_button(title = "Download chart data", data = mat_age_objs$chart_data, filename = "hwhc_figure_x")`
+```{r matex_age_chart_download}
+get_download_button(title = "Download chart data", data = mat_age_objs$chart_data, filename = "hwhc_figure_x")
+```
 
 The distribution of maternity exemption certificates by age peaks at 30-34, with 198,000 certificates issued to this age group in 2023/24. 
 
@@ -498,8 +496,9 @@ highcharter::hw_grid(
   ncol = 2
 )
 ```
-
-`r get_download_button(title = "Download chart data", data = mat_imd_objs$chart_data, filename = "hwhc_figure_x")`
+```{r matex_imd_profile_chart_download}
+get_download_button(title = "Download chart data", data = mat_imd_objs$chart_data, filename = "hwhc_figure_x")
+```
 
 The English Indices of Deprivation provide a measure of deprivation. In this report deprivation reflects the applicant's registered address. [Section 3.3 of this summary](#about_imd) contains more information on this measure.
 
@@ -516,10 +515,15 @@ The latest available live birth statistics published by Office for National Stat
 :::
 
 ```{r mat_icb_vis, figures-side, fig.show="hold", out.width="50%"}
-highcharter::hw_grid(mat_icb_objs$map, mat_icb_objs$chart, ncol = 2)
+highcharter::hw_grid(
+  mat_icb_objs$map,
+  mat_icb_objs$chart,
+  ncol = 2
+)
 ```
-
-`r get_download_button(title = "Download chart data", data = mat_icb_objs$chart_data, filename = "hwhc_figure_x")`
+```{r mat_icb_vis_download}
+get_download_button(title = "Download chart data", data = mat_icb_objs$chart_data, filename = "hwhc_figure_x")
+```
 
 Population estimates use figures published by [Office for National Statistics for ICB population](https://www.ons.gov.uk/peoplepopulationandcommunity/populationandmigration/populationestimates/datasets/clinicalcommissioninggroupmidyearpopulationestimates). These figures are mid-year estimates with 2022 population estimates used for this report. This is the latest available population statistics at the time of publication. To align with women who may benefit from maternity exemption certificates, population figures are based on the female population aged 15-45. However, these population statistics only cover a single year and will include women who are not pregnant and have not recently given birth.
 
@@ -566,9 +570,8 @@ Medical exemption certificates are usually valid for 5 years. A GP or doctor can
 
 ```{r medex_applications_chart}
 med_application_objs$chart
+get_download_button(title = "Download chart data", data = med_application_objs$chart_data, filename = "hwhc_figure_x")
 ```
-
-`r get_download_button(title = "Download chart data", data = med_application_objs$chart_data, filename = "hwhc_figure_x")`
 
 Applications for medical exemption certificates dipped in 2020/21 and 2021/22 but has since increased to the highest level in recent years. 
 
@@ -590,9 +593,8 @@ Applications are authorised by a healthcare professional, who confirms eligibili
 
 ```{r medex_issued_chart}
 med_issued_objs$chart
+get_download_button(title = "Download chart data", data = med_issued_objs$chart_data, filename = "hwhc_figure_x")
 ```
-
-`r get_download_button(title = "Download chart data", data = med_issued_objs$chart_data, filename = "hwhc_figure_x")`
 
 The number of issued medical exemption certificates dipped in 2020/2021 but has since increased to the highest level in recent years.
 
@@ -614,9 +616,8 @@ Medical exemption certificates are usually valid for a period of 5 years. The nu
 
 ```{r medex_active_charts}
 med_active_objs$chart
+get_download_button(title = "Download chart data", data = med_active_objs$chart_data, filename = "hwhc_figure_x")
 ```
-
-`r get_download_button(title = "Download chart data", data = med_active_objs$chart_data, filename = "hwhc_figure_x")`
 
 The number of active certificates is only available from 2019/20 due to retention schedules for certificates prior to this period. It should be noted that active certificates are based solely on the start and expiration date of the issued certificates. This does not consider if the certificate holder was using the certificate or not.
 
@@ -635,16 +636,14 @@ Over the past five years there have been around 2,500,000 medical exemption cert
 
 ```{r medex_age_chart}
 med_age_objs$chart
+get_download_button(title = "Download chart data", data = med_age_objs$chart_data, filename = "hwhc_figure_x")
 ```
-
-`r get_download_button(title = "Download chart data", data = med_age_objs$chart_data, filename = "hwhc_figure_x")`
 
 There is a strong relationship between age and medical exemption certificates. The number of certificates issued steadily rises in line with age, which may be expected due to long-term conditions and multi-morbidity being more prevalent in older people. In 2023/24 the number of issued certificates ranged from 8,950 in the 15-19 age group, to 134,000 in the 55-59 age group.
 
 As a medical exemption certificate only entitles the holder to free NHS prescriptions, it is not required after the age of 60, when NHS prescriptions are automatically free.
 
 #### Figure X: Number of medical exemption certificates issued, split by deprivation profile (2023/24) {.toc-ignore}
-
 
 ::: {.row style="display: flex; padding-bottom: 15px;"}
 ::: col-md-6
@@ -657,9 +656,8 @@ As a medical exemption certificate only entitles the holder to free NHS prescrip
 
 ```{r medex_age_profile_chart}
 med_imd_objs$chart
+get_download_button(title = "Download chart data", data = med_imd_objs$chart_data, filename = "hwhc_figure_x")
 ```
-
-`r get_download_button(title = "Download chart data", data = med_imd_objs$chart_data, filename = "hwhc_figure_x")`
 
 The English Indices of Deprivation provide a measure of deprivation. In this report deprivation reflects the applicant's registered address. [Section 3.3 of this summary](#about_imd) contains more information on this measure.
 
@@ -677,10 +675,15 @@ The number of certificates issued in the most deprived areas was slightly lower 
 :::
 
 ```{r med_icb_vis, figures-side, fig.show="hold", out.width="50%"}
-highcharter::hw_grid(med_icb_objs$map, med_icb_objs$chart, ncol = 2)
+highcharter::hw_grid(
+  med_icb_objs$map,
+  med_icb_objs$chart,
+  ncol = 2
+)
 ```
-
-`r get_download_button(title = "Download chart data", data = med_icb_objs$chart_data, filename = "hwhc_figure_x")`
+```{r med_icb_vis_download}
+get_download_button(title = "Download chart data", data = med_icb_objs$chart_data, filename = "hwhc_figure_x")
+```
 
 Population estimates are based on the number of patients, aged 16-59, identified receiving NHS prescriptions during 2023/24. The population estimates will include all patients regardless of whether or not they paid prescription charges in 2023/24, and will include patients who do not qualify for support via the medical exemption certificate. These population estimates may miss some patients who cannot be identified in the NHS prescriptions dataset, or those who cannot be assigned to a ICB or age group from the available data.
 
@@ -711,9 +714,8 @@ Patients receiving prescriptions for hormone replacement therapy (HRT) may benef
 
 ```{r ppc_applications_chart}
 ppc_application_objs$chart
+get_download_button(title = "Download chart data", data = ppc_application_objs$chart_data, filename = "hwhc_figure_x")
 ```
-
-`r get_download_button(title = "Download chart data", data = ppc_application_objs$chart_data, filename = "hwhc_figure_x")`
 
 Applications for 12-month PPCs have shown a consistent year-on-year increase. In 2023/24 there were 2,160,000 applications received, up from 2,060,000 in 2022/23 which is a 5% increase. The number of applications for 12-month certificates is more than double the number of applications for 3-month certificates. 
 
@@ -737,9 +739,8 @@ Not all applications will result in a certificate being issued. Certificates wil
 
 ```{r ppc_issued_chart}
 ppc_issued_objs$chart
+get_download_button(title = "Download chart data", data = ppc_issued_objs$chart_data, filename = "hwhc_figure_x")
 ```
-
-`r get_download_button(title = "Download chart data", data = ppc_issued_objs$chart_data, filename = "hwhc_figure_x")`
 
 The number of 12-month PPC certificates issued has shown a consistent year-on-year increase. In 2023/24 there were 2,060,000 certificates issued, up from 1,980,000 in 2022/23 which is a 4% increase. The number of 12-month certificates issued is more than double the number of 3-month certificates issued. 
 
@@ -759,9 +760,8 @@ The year-on-year increase for 3-month certificates issued is not as high, and th
 
 ```{r ppc_age_profile_chart}
 ppc_age_objs$chart
+get_download_button(title = "Download chart data", data = ppc_age_objs$chart_data, filename = "hwhc_figure_x")
 ```
-
-`r get_download_button(title = "Download chart data", data = ppc_age_objs$chart_data, filename = "hwhc_figure_x")`
 
 There is a strong relationship between age PPC certificates issued. 
 
@@ -781,9 +781,8 @@ The 12-month certificate is more popular across all age bands. However, the rati
 
 ```{r ppc_imd_chart}
 ppc_imd_objs$chart
+get_download_button(title = "Download chart data", data = ppc_imd_objs$chart_data, filename = "hwhc_figure_x")
 ```
-
-`r get_download_button(title = "Download chart data", data = ppc_imd_objs$chart_data, filename = "hwhc_figure_x")`
 
 The English Indices of Deprivation provide a measure of deprivation. In this report deprivation reflects the applicant's registered address. [Section 3.3 of this summary](#about_imd) contains more information on this measure.
 
@@ -798,10 +797,15 @@ There is not a strong relationship between deprivation and number of PPCs issued
 :::
 
 ```{r ppc_icb_vis, figures-side, fig.show="hold", out.width="50%"}
-highcharter::hw_grid(ppc_icb_objs$map, ppc_icb_objs$chart, ncol = 2)
+highcharter::hw_grid(
+  ppc_icb_objs$map, 
+  ppc_icb_objs$chart, 
+  ncol = 2
+)
 ```
-
-`r get_download_button(title = "Download chart data", data = ppc_icb_objs$chart_data, filename = "hwhc_figure_x")`
+```{r ppc_icb_vis_download}
+get_download_button(title = "Download chart data", data = ppc_icb_objs$chart_data, filename = "hwhc_figure_x")
+```
 
 Population estimates are based on the number of patients, aged 16-59, identified receiving NHS prescriptions during 2023/24. The population estimates will include all patients regardless of whether or not they paid prescription charges in 2023/24. These population estimates may miss some patients who cannot be identified in the NHS prescriptions dataset, or those who cannot be assigned to a ICB or age group from the available data.
 
@@ -840,9 +844,8 @@ Patients receiving prescriptions for other medicines, include HRT medicines not 
 
 ```{r hrtppc_applications_chart}
 hrt_application_objs$chart
+get_download_button(title = "Download chart data", data = hrt_application_objs$chart_data, filename = "hwhc_figure_x")
 ```
-
-`r get_download_button(title = "Download chart data", data = hrt_application_objs$chart_data, filename = "hwhc_figure_x")`
 
 Following the launch of the HRT PPC in April 2023, there were 143,000 applications received in the first month alone. The number of applications then declined each month but have started to show signs 
 of growth near the end of the year. 
@@ -870,8 +873,9 @@ highcharter::hw_grid(
   ncol = 2
 )
 ```
-
-`r get_download_button(title = "Download chart data", data = hrt_issued_objs$chart_data, filename = "hwhc_figure_x")`
+```{r hrtppc_issued_chart_download}
+get_download_button(title = "Download chart data", data = hrt_issued_objs$chart_data, filename = "hwhc_figure_x")
+```
 
 The data for issued certificates is very similar to the application data. This is to be expected as there is no qualifying criteria for HRT PPC. However certificates may not be issued if there are any issues with with the application that are not resolved.
 
@@ -902,8 +906,9 @@ highcharter::hw_grid(
   ncol = 2
 )
 ```
-
-`r get_download_button(title = "Download chart data", data = hrt_age_objs$chart_data, filename = "hwhc_figure_x")`
+```{r hrtppc_age_chart_download}
+get_download_button(title = "Download chart data", data = hrt_age_objs$chart_data, filename = "hwhc_figure_x")
+```
 
 Over 92% of HRT PPCs were issued to people aged 45 to 59. This may be expected as the menopause usually affects women between the ages of 45 and 55. Certificates peaked at the 50 to 54 age group, with 226,000 HRT PPCs issued to this age group.
 
@@ -930,8 +935,9 @@ highcharter::hw_grid(
   ncol = 2
 )
 ```
-
-`r get_download_button(title = "Download chart data", data = hrt_imd_objs$chart_data, filename = "hwhc_figure_x")`
+```{r hrtppc_imd_chart_download}
+get_download_button(title = "Download chart data", data = hrt_imd_objs$chart_data, filename = "hwhc_figure_x")
+```
 
 There is a strong relationship between deprivation and the number of HRT PPCs issued in 2023/24. There were only 37,600 certificates issued in the most deprived areas. There were 189,000 certificates issued in the least deprived areas.
 
@@ -946,10 +952,15 @@ The distribution of HRT PPCs by deprivation is similar to the distribution of th
 :::
 
 ```{r hrt_icb_vis, figures-side, fig.show="hold", out.width="50%"}
-highcharter::hw_grid(hrt_icb_objs$map, hrt_icb_objs$chart, ncol = 2)
+highcharter::hw_grid(
+  hrt_icb_objs$map, 
+  hrt_icb_objs$chart, 
+  ncol = 2
+)
 ```
-
-`r get_download_button(title = "Download chart data", data = hrt_icb_objs$chart_data, filename = "hwhc_figure_x")`
+```{r hrt_icb_vis_download}
+get_download_button(title = "Download chart data", data = hrt_icb_objs$chart_data, filename = "hwhc_figure_x")
+```
 
 Population estimates are based on the number of patients, aged 16-59, identified receiving NHS prescriptions for drugs covered by the HRT PPC during 2023/24. The population estimates will include all patients regardless of whether or not they paid prescription charges in 2023/24. These population estimates may miss some patients who cannot be identified in the NHS prescriptions dataset, or those who cannot be assigned to a ICB or age group from the available data.
 
@@ -993,9 +1004,8 @@ Certificates are valid for 7 months, and issued every 6 months in April and Sept
 
 ```{r tax_issued_chart}
 tax_issued_objs$chart
+get_download_button(title = "Download chart data", data = tax_issued_objs$chart_data, filename = "hwhc_figure_x")
 ```
-
-`r get_download_button(title = "Download chart data", data = tax_issued_objs$chart_data, filename = "hwhc_figure_x")`
 
 The number of issued Tax Credit Exemption Certificates has been dropping year on year from 3,740,000 in 2018/19 to 1,150,000 in 2023/24. This strong decline may be linked to the Universal Credit rollout as people are migrated to new benefit schemes. The number of certificates issued each year has declined by between 22% and 26% since 2019/2020.
 
@@ -1013,9 +1023,8 @@ The number of issued Tax Credit Exemption Certificates has been dropping year on
 
 ```{r tax_age_chart}
 tax_age_objs$chart
+get_download_button(title = "Download chart data", data = tax_age_objs$chart_data, filename = "hwhc_figure_x")
 ```
-
-`r get_download_button(title = "Download chart data", data = tax_age_objs$chart_data, filename = "hwhc_figure_x")`
 
 The number of Tax Credit Exemption Certificates issued in 2023/24 peaked at ages 40-44 with 268,000 certificates issued.
 
@@ -1037,9 +1046,8 @@ Although numbers are relatively small, some certificates are issued to people ag
 
 ```{r tax_age_profile_chart}
 ch_tax_age_trend
+get_download_button(title = "Download chart data", data = dl_tax_age_trend, filename = "hwhc_figure_x")
 ```
-
-`r get_download_button(title = "Download chart data", data = dl_tax_age_trend, filename = "hwhc_figure_x")`
 
 The age profile of Tax Credit Exemption Certificates have changed considerably over the past few years. In 2018/19 over 55% of certificates holders were under 40 years old, but as of 2023/24 this group represents only 30% of certificates issued. Following the introduction of Universal Credit, new applicants will receive support via Universal Support rather than tax credits.
 
@@ -1054,9 +1062,8 @@ The age profile of Tax Credit Exemption Certificates have changed considerably o
 
 ```{r tax_imd_chart}
 tax_imd_objs$chart
+get_download_button(title = "Download chart data", data = tax_imd_objs$chart_data, filename = "hwhc_figure_x")
 ```
-
-`r get_download_button(title = "Download chart data", data = tax_imd_objs$chart_data, filename = "hwhc_figure_x")`
 
 The English Indices of Deprivation provide a measure of deprivation. In this report deprivation reflects the applicant's registered address. [Section 3.3 of this summary](#about_imd) contains more information on this measure. These indices of deprivation are specific to England and therefore can only be applied to certificates that can be assigned to an English postcode.
 
@@ -1071,10 +1078,15 @@ There is a strong relationship between deprivation and number of NHS tax credit 
 :::
 
 ```{r tax_icb_vis, figures-side, fig.show="hold", out.width="50%"}
-highcharter::hw_grid(tax_icb_objs$map, tax_icb_objs$chart, ncol = 2)
+highcharter::hw_grid(
+  tax_icb_objs$map, 
+  tax_icb_objs$chart, 
+  ncol = 2
+)
 ```
-
-`r get_download_button(title = "Download chart data", data = tax_icb_objs$chart_data, filename = "hwhc_figure_x")`
+```{r tax_icb_vis_download}
+get_download_button(title = "Download chart data", data = tax_icb_objs$chart_data, filename = "hwhc_figure_x")
+```
 
 Population estimates use figures published by [Office for National Statistics for ICB population](https://www.ons.gov.uk/peoplepopulationandcommunity/populationandmigration/populationestimates/datasets/clinicalcommissioninggroupmidyearpopulationestimates). These figures are mid-year estimates with 2022 population estimates used for this report. This is the latest available population statistics at the time of publication. To align with NHS tax credit exemption certificates, population figures are based on the population aged 16 and over.
 
